# Amazons

./: .gitignore
Amazons_CPP/: Board.cpp  Board.h  CMakeLists.txt  main.cpp
Amazons_Py/: agent.py  amazonsModel.py  bot_vs_bot.py  dataset.py  expSaver.py  init_model.py  mcts.py  mcts.pyx  print_board.py  train.py  train_exp.py
